--- a/templates/coord-init.yaml
+++ b/templates/coord-init.yaml
@@ -12,8 +12,7 @@ hosts:
 orchestrator:
   waitForServices: true
 
-{{if .RegistryUrl}}
-airgap:
+{{if .RegistryUrl}}airgap:
   registryUrl: {{ .RegistryUrl }} #string - default is "marketplace.us1.greenlake-hpe.com/ezkf"
   registryInsecure: {{ .RegistryInsecure }} #bool: default is false.
   registryCaFile: #base64-encoded-string
@@ -21,9 +20,7 @@ airgap:
   password: {{ .RegistryPassword }} #base64-encoded-string
 {{end}}
 
-{{if .Proxy }}
-webproxy:
+{{if .Proxy }}webproxy:
   httpProxy: {{ .Proxy }}
   httpsProxy: {{ .Proxy }}
-  noProxy: {{ .NoProxy }}
-{{end}}
+  noProxy: {{ .NoProxy }}{{end}}
