--- a/templates/workload-deploy.yaml
+++ b/templates/workload-deploy.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 data:
   registryCaFile:
@@ -19,6 +20,16 @@ metadata:
   namespace: {{ .ClusterName }}
 type: Opaque
 
+---
+apiVersion: v1
+data:
+  access-key: {{ .DF.AccessKey }}
+  secret-key: {{ .DF.SecretKey }}
+kind: Secret
+metadata:
+  name: local-s3-secret
+  namespace: {{ .ClusterName }}
+type: Opaque
 
 ---
 apiVersion: ezkfops.hpe.ezkf-ops.com/v1alpha1
@@ -58,3 +69,36 @@ spec:
     secret_name: "airgap"
     registryUrl: {{ .RegistryUrl }}
     registryInsecure: {{ .RegistryInsecure }}
+  objectStore:
+    awsConfig:
+      endpoint: ""
+      region: ""
+      secret: ""
+    edfConfig:
+      endpoint: "http://{{ .DF.CldbNodes }}:9000"
+      secret: "local-s3-secret"
+    gl4fConfig:
+      endpoint: ""
+      secret: ""
+    minioConfig:
+      endpoint: ""
+      secret: ""
+    provider: "EDF-S3"
+  storage:
+    edfConfig:
+      cldbHosts: {{ .DF.CldbNodes }}
+      mountPrefix: "/ezua"
+      restServers: {{ .DF.RestNodes }}
+      secretName: ""
+    gl4fConfig:
+      endpoint: ""
+      rootExport: ""
+      secretName: ""
+      viewPolicy: ""
+      vipPoolName: ""
+    nfsConfig:
+      endpoint: {{ .DF.CldbNodes }}
+      share: "/ezua"
+      mountOptions:
+      - nfsvers=4.1
+    provider: "NFS"
