df and ua ok - move to local installer

--- a/templates/03-workload-deploy.yaml
+++ b/templates/03-workload-deploy.yaml
@@ -50,10 +50,10 @@ data:
             "registryInsecure": {{ .RegistryInsecure }}
           },
           "apps": {
-            "livy": false,
-            "ezsql": false,
-            "superset": false,
-            "feast": false,
+            "livy": true,
+            "ezsql": true,
+            "superset": true,
+            "feast": true,
             "mlde": false,
             "airflow": true,
             "spark": true,
