--- a/templates/df-stanza.yaml
+++ b/templates/df-stanza.yaml
@@ -9,19 +9,19 @@ config:
   enable_nfs: True
   nfs_type: "NFSv3"
   cluster_admin_id: mapr
-  cluster_admin_password: mapr123
+  cluster_admin_password: {{ .Password }}
   custom_pbs_disable: false
   license_type: M5
   mep_version: 9.3.0
   cluster_name: datafabric
   disks:
-    - /dev/sdb
+    - {{ .Domain }}
   disk_format: true
   disk_stripe: 1
   db_admin_user: root
-  db_admin_password: mapr123
-  log_admin_password: mapr123
-  metrics_ui_admin_password: mapr123
+  db_admin_password: {{ .Password }}
+  log_admin_password: {{ .Password }}
+  metrics_ui_admin_password: {{ .Password }}
   enable_encryption_at_rest: True
   services:
     template-60-maprxd:
