--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,29 +1,43 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: Build and Publish Go Package
 
 on:
-  workflow_dispatch:
-  # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+  workflow_dispatch:  # for Manual trigger
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '^1.23'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build package
+        run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+      # - name: Run tests
+      #   run: go test ./...
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '^1.23'
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./ezlabctl
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
